yarn: add support for erasure mapping actions

--- a/data/mappings/default.mapping_set.json
+++ b/data/mappings/default.mapping_set.json
@@ -529,5 +529,21 @@
                 }
             }
         ]
+    },
+    {
+        "lam_id" : "lam::pointer",
+        "names_by_language" : [
+            {
+                "language" : "cpp",
+                "default_name" : {
+                    "simple": "shared_ptr",
+                    "model_modules": "boost"
+                }
+            },
+            {
+                "language" : "csharp",
+                "mapping_action" : "erase"
+            }
+        ]
     }
 ]
