test models: generate template instantiations for primitive serialisation
- add canned tests for primitive model

--- a/projects/test_models/test_model_sanitizer/tests/CMakeLists.txt
+++ b/projects/test_models/test_model_sanitizer/tests/CMakeLists.txt
@@ -66,6 +66,7 @@ target_link_libraries(${tests_name}
     trivial_inheritance
     trivial_association
     enumeration
+    primitive
     std_model
     boost_model
     stereotypes
