quilt.csharp: implement types facet for primitives

--- a/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
+++ b/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Dumpers\PrimitiveBuiltinsDumper.cs" />
     <Compile Include="Dumpers\SecondChildWithoutMembersDumper.cs" />
     <Compile Include="Dumpers\ShortEnumDumper.cs" />
+    <Compile Include="Dumpers\ShortPrimitiveDumper.cs" />
     <Compile Include="Dumpers\TestAllKnobsDumper.cs" />
     <Compile Include="Dumpers\ThirdChildWithMembersDumper.cs" />
     <Compile Include="SequenceGenerators\AllObjectCollectionsSequenceGenerator.cs" />
@@ -116,6 +117,7 @@
     <Compile Include="SequenceGenerators\PrimitiveBuiltinsSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\SecondChildWithoutMembersSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ShortEnumSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\ShortPrimitiveSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\TestAllKnobsSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ThirdChildWithMembersSequenceGenerator.cs" />
     <Compile Include="Types\AllObjectCollections.cs" />
@@ -161,6 +163,7 @@
     <Compile Include="Types\PrimitiveBuiltins.cs" />
     <Compile Include="Types\SecondChildWithoutMembers.cs" />
     <Compile Include="Types\ShortEnum.cs" />
+    <Compile Include="Types\ShortPrimitive.cs" />
     <Compile Include="Types\TestAllKnobs.cs" />
     <Compile Include="Types\ThirdChildWithMembers.cs" />
   </ItemGroup>
