test models: add all primitives to csharp model
- quilt.csharp: fix helper generation for primitives.

--- a/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
+++ b/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
@@ -35,6 +35,8 @@
     <Compile Include="Dumpers\AssociationDumper.cs" />
     <Compile Include="Dumpers\BaseDumper.cs" />
     <Compile Include="Dumpers\BookTypesDumper.cs" />
+    <Compile Include="Dumpers\BoolPrimitiveDumper.cs" />
+    <Compile Include="Dumpers\CharPrimitiveDumper.cs" />
     <Compile Include="Dumpers\ChildOfAChild1Dumper.cs" />
     <Compile Include="Dumpers\ChildOfAChild2Dumper.cs" />
     <Compile Include="Dumpers\ChildViaSettingsDumper.cs" />
@@ -43,11 +45,15 @@
     <Compile Include="Dumpers\Descendant1Dumper.cs" />
     <Compile Include="Dumpers\Descendant2Dumper.cs" />
     <Compile Include="Dumpers\Descendant3Dumper.cs" />
+    <Compile Include="Dumpers\DoublePrimitiveDumper.cs" />
+    <Compile Include="Dumpers\FloatPrimitiveDumper.cs" />
     <Compile Include="Dumpers\HexFlagsDumper.cs" />
     <Compile Include="Dumpers\ImmutableFourDumper.cs" />
     <Compile Include="Dumpers\ImmutableOnePrimitiveDumper.cs" />
     <Compile Include="Dumpers\ImmutableTwoDumper.cs" />
     <Compile Include="Dumpers\ImmutableZeroDumper.cs" />
+    <Compile Include="Dumpers\IntPrimitiveDumper.cs" />
+    <Compile Include="Dumpers\LongPrimitiveDumper.cs" />
     <Compile Include="Dumpers\NoPropertiesDumper.cs" />
     <Compile Include="Dumpers\NonFinalOrphanDumper.cs" />
     <Compile Include="Dumpers\NonSealedLeafDumper.cs" />
@@ -75,11 +81,16 @@
     <Compile Include="Dumpers\ShortPrimitiveDumper.cs" />
     <Compile Include="Dumpers\TestAllKnobsDumper.cs" />
     <Compile Include="Dumpers\ThirdChildWithMembersDumper.cs" />
+    <Compile Include="Dumpers\UIntPrimitiveDumper.cs" />
+    <Compile Include="Dumpers\ULongPrimitiveDumper.cs" />
+    <Compile Include="Dumpers\UShortPrimitiveDumper.cs" />
     <Compile Include="SequenceGenerators\AllObjectCollectionsSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\AssistantSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\AssociationSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\BaseSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\BookTypesSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\BoolPrimitiveSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\CharPrimitiveSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ChildOfAChild1SequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ChildOfAChild2SequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ChildViaSettingsSequenceGenerator.cs" />
@@ -88,11 +99,15 @@
     <Compile Include="SequenceGenerators\Descendant1SequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\Descendant2SequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\Descendant3SequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\DoublePrimitiveSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\FloatPrimitiveSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\HexFlagsSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ImmutableFourSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ImmutableOnePrimitiveSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ImmutableTwoSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ImmutableZeroSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\IntPrimitiveSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\LongPrimitiveSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\NoPropertiesSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\NonFinalOrphanSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\NonSealedLeafSequenceGenerator.cs" />
@@ -120,10 +135,15 @@
     <Compile Include="SequenceGenerators\ShortPrimitiveSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\TestAllKnobsSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ThirdChildWithMembersSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\UIntPrimitiveSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\ULongPrimitiveSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\UShortPrimitiveSequenceGenerator.cs" />
     <Compile Include="Types\AllObjectCollections.cs" />
     <Compile Include="Types\Association.cs" />
     <Compile Include="Types\Base.cs" />
     <Compile Include="Types\BookTypes.cs" />
+    <Compile Include="Types\BoolPrimitive.cs" />
+    <Compile Include="Types\CharPrimitive.cs" />
     <Compile Include="Types\ChildOfAChild1.cs" />
     <Compile Include="Types\ChildOfAChild2.cs" />
     <Compile Include="Types\ChildViaSettings.cs" />
@@ -132,11 +152,15 @@
     <Compile Include="Types\Descendant1.cs" />
     <Compile Include="Types\Descendant2.cs" />
     <Compile Include="Types\Descendant3.cs" />
+    <Compile Include="Types\DoublePrimitive.cs" />
+    <Compile Include="Types\FloatPrimitive.cs" />
     <Compile Include="Types\HexFlags.cs" />
     <Compile Include="Types\ImmutableFour.cs" />
     <Compile Include="Types\ImmutableOnePrimitive.cs" />
     <Compile Include="Types\ImmutableTwo.cs" />
     <Compile Include="Types\ImmutableZero.cs" />
+    <Compile Include="Types\IntPrimitive.cs" />
+    <Compile Include="Types\LongPrimitive.cs" />
     <Compile Include="Types\MyException.cs" />
     <Compile Include="Types\NoProperties.cs" />
     <Compile Include="Types\NonFinalOrphan.cs" />
@@ -166,6 +190,9 @@
     <Compile Include="Types\ShortPrimitive.cs" />
     <Compile Include="Types\TestAllKnobs.cs" />
     <Compile Include="Types\ThirdChildWithMembers.cs" />
+    <Compile Include="Types\UIntPrimitive.cs" />
+    <Compile Include="Types\ULongPrimitive.cs" />
+    <Compile Include="Types\UShortPrimitive.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
