--- a/projects/test_models/all_path_and_directory_settings/cpp_kernel/CMakeLists.txt
+++ b/projects/test_models/all_path_and_directory_settings/cpp_kernel/CMakeLists.txt
@@ -17,7 +17,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 # MA 02110-1301, USA.
 #
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/some_source_dir)
 
 install(
     DIRECTORY some_include_dir/
